# enum_flags

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  README.md
cmake/: enum_flagsConfig.cmake.in
src/: enum_flags.h
src/enum_flags/: enum_flags.h  index.md
src/lumik/enum_flags/: enum_flags.h  index.md  style_guide.md
tests/: CMakeLists.txt  enum_flags_unittest.cpp
